[gd_scene load_steps=15 format=3 uid="uid://d3ffxjiwggxht"]

[ext_resource type="Script" uid="uid://bf8j0182i20sp" path="res://src/scene/ui/app_element_ui/omni_console_ui.gd" id="1_2qqn0"]
[ext_resource type="Texture2D" uid="uid://m4ke5mdlunio" path="res://src/resources/animated_texture/omni_text_3_animated.tres" id="3_dvhog"]
[ext_resource type="Texture2D" uid="uid://djoyock1l5jox" path="res://src/resources/animated_texture/cool_tiny_cube.tres" id="4_848k1"]
[ext_resource type="Texture2D" uid="uid://clidepxp1kaqa" path="res://src/assets/texture/ui/console/trap_outline_symbol_filled_flipped.png" id="5_heub3"]
[ext_resource type="Texture2D" uid="uid://cxqdpy66wjkl7" path="res://src/assets/texture/ui/console/u_darker.png" id="6_pi5lq"]
[ext_resource type="Texture2D" uid="uid://cocx6s8ouhll0" path="res://src/assets/texture/ui/console/file_browser_button_dark.png" id="7_rkik4"]
[ext_resource type="Texture2D" uid="uid://dgxbdsfjtk4xh" path="res://icon.png" id="9_pjlbn"]

[sub_resource type="Resource" id="Resource_med4x"]
metadata/__load_path__ = "res://core/assets/font/OfficeCodePro-Light.otf"

[sub_resource type="Resource" id="Resource_or8sq"]
metadata/__load_path__ = "res://core/assets/font/OfficeCodePro-Light.otf"

[sub_resource type="Resource" id="Resource_ci5v5"]
metadata/__load_path__ = "res://core/assets/font/OfficeCodePro-Light.otf"

[sub_resource type="Resource" id="Resource_od2km"]
metadata/__load_path__ = "res://core/assets/font/frau-offset.tres"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ug05"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="Resource" id="Resource_4laiq"]
metadata/__load_path__ = "res://core/assets/font/OfficeCodePro-Light.otf"

[sub_resource type="FontVariation" id="FontVariation_08cj1"]
spacing_top = -4

[node name="console_ui" type="PanelContainer"]
custom_minimum_size = Vector2(250, 50)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_2qqn0")

[node name="vbox" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="code_split" type="VSplitContainer" parent="vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="code" type="CodeEdit" parent="vbox/code_split"]
self_modulate = Color(0.6468, 0.648837, 0.667843, 1)
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_fonts/font = SubResource("Resource_med4x")
theme_override_font_sizes/font_size = 9
wrap_mode = 1
indent_wrapped_lines = true
scroll_smooth = true
symbol_lookup_on_click = true
line_folding = true

[node name="background" type="Control" parent="vbox/code_split"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="vbox/code_split/background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_dvhog")

[node name="spacer" type="Control" parent="vbox"]
visible = false
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2

[node name="line_hbox" type="HBoxContainer" parent="vbox"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
theme_override_constants/separation = 0

[node name="center_box" type="CenterContainer" parent="vbox/line_hbox"]
custom_minimum_size = Vector2(12, 26)
layout_mode = 2

[node name="line_prefix_label" type="RichTextLabel" parent="vbox/line_hbox/center_box"]
custom_minimum_size = Vector2(9, 9)
layout_mode = 2
theme_override_fonts/normal_font = SubResource("Resource_or8sq")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center][pulse freq=1.75 color=#ffffff80 ease=-1.5]$[/pulse][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="line" type="LineEdit" parent="vbox/line_hbox"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("Resource_ci5v5")
theme_override_font_sizes/font_size = 9
placeholder_text = "greetings, user."
clear_button_enabled = true
right_icon = ExtResource("4_848k1")
flat = true

[node name="spacer2" type="Control" parent="vbox"]
visible = false
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
mouse_filter = 2

[node name="sep" type="HSeparator" parent="vbox"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="spacer3" type="Control" parent="vbox"]
visible = false
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2

[node name="menu" type="MenuBar" parent="vbox"]
layout_mode = 2
theme_override_fonts/font = SubResource("Resource_od2km")
theme_override_font_sizes/font_size = 16

[node name="Edit" type="PopupMenu" parent="vbox/menu"]
size = Vector2i(60, 100)
theme_override_font_sizes/font_size = 11
item_count = 1
item_0/text = "Theme"

[node name="sep2" type="HSeparator" parent="vbox"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="spacer4" type="Control" parent="vbox"]
visible = false
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2

[node name="hbox" type="HBoxContainer" parent="vbox"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="console_menu_toggler" type="Button" parent="vbox/hbox"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
icon = ExtResource("5_heub3")
flat = true
expand_icon = true

[node name="console_history_toggler" type="Button" parent="vbox/hbox"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
icon = ExtResource("6_pi5lq")
flat = true
expand_icon = true

[node name="file_browser_toggler" type="Button" parent="vbox/hbox"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
icon = ExtResource("7_rkik4")
flat = true
expand_icon = true

[node name="sep" type="VSeparator" parent="vbox/hbox"]
layout_mode = 2
mouse_filter = 2

[node name="path_panel_container" type="PanelContainer" parent="vbox/hbox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8ug05")

[node name="path_label" type="RichTextLabel" parent="vbox/hbox/path_panel_container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = SubResource("Resource_4laiq")
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true

[node name="spacer" type="Control" parent="vbox/hbox"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
mouse_filter = 2

[node name="sep2" type="VSeparator" parent="vbox/hbox"]
layout_mode = 2
mouse_filter = 2

[node name="console_label" type="RichTextLabel" parent="vbox/hbox"]
layout_mode = 2
theme_override_fonts/normal_font = SubResource("FontVariation_08cj1")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[pulse freq=0.75 color=#ffffff80 ease=-1.5][url=https://gammasynth.itch.io/omni]Amn1[/url][/pulse]_0.0.0.1"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="omni_button" type="Button" parent="vbox/hbox"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
icon = ExtResource("9_pjlbn")
flat = true
expand_icon = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="mouse_entered" from="vbox/line_hbox/line" to="." method="_on_line_mouse_entered"]
[connection signal="mouse_exited" from="vbox/line_hbox/line" to="." method="_on_line_mouse_exited"]
[connection signal="text_submitted" from="vbox/line_hbox/line" to="." method="_on_line_text_submitted"]
[connection signal="index_pressed" from="vbox/menu/Edit" to="." method="_on_edit_index_pressed"]
[connection signal="button_down" from="vbox/hbox/console_menu_toggler" to="." method="_on_console_menu_toggler_button_down"]
[connection signal="button_down" from="vbox/hbox/console_history_toggler" to="." method="_on_console_history_toggler_button_down"]
[connection signal="button_down" from="vbox/hbox/file_browser_toggler" to="." method="_on_file_browser_toggler_button_down"]
[connection signal="meta_clicked" from="vbox/hbox/console_label" to="." method="_on_console_label_meta_clicked"]
[connection signal="meta_hover_ended" from="vbox/hbox/console_label" to="." method="_on_console_label_meta_hover_ended"]
[connection signal="meta_hover_started" from="vbox/hbox/console_label" to="." method="_on_console_label_meta_hover_started"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
